<resources>
    <string name="app_name">Maha Millets</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_donate">Donate</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="presented_by">Presented by</string>
    <string name="loading">Loading</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="empty_user_id">Empty user id</string>
    <string name="empty_password">Empty password</string>
    <string name="login">Log In</string>
    <string name="user_name">Email/Phone number</string>
    <string name="user_name_email">Email/Phone number</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="powered_by">Powered By</string>
    <string name="an_initiative_of">An Initiative of</string>
    <string name="designed_and_developed_by">Designed and Developed By</string>
    <string name="exit_app_string">Do you want to exit app</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_verification_message">We will send you a one time password on registered <b>Mobile Number/Email</b></string>
    <string name="submit">Submit</string>
    <string name="alrady_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="empty_otp">Empty Otp</string>
    <string name="sucessfull_login">Logged in Sucessfully</string>
    <string name="fill_complete_otp">Fill complete otp</string>
    <string name="select_language">Select language</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
    <string name="english">English</string>
    <string name="continue_text">Continue</string>
    <string name="grain">Grain</string>
    <string name="money">Money</string>
    <string name="blog">Blog</string>
    <string name="quiz">Quiz</string>
    <string name="video">Videos</string>
    <string name="select_an_amount_of_your_choice">(Select an amount of your choice)</string>
    <string name="fifty">\u20B950</string>
    <string name="hundred">\u20B9100</string>
    <string name="twofifty">\u20B9250</string>
    <string name="fivehundred">\u20B9500</string>
    <string name="thousand">\u20B91000</string>
    <string name="onethousandfivehundred">\u20B91500</string>
    <string name="any_other_amount">\u20B9Any other amount</string>
    <string name="or">or</string>
    <string name="pay">Pay</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_and_support">Help and Support</string>
    <string name="logout">Logout</string>
    <string name="address">Address</string>
    <string name="about_us">About Us</string>
    <string name="register">Register</string>
    <string name="user_name_text">User Name</string>
    <string name="re_enter_password">Re Enter Password</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="taluka">Taluka</string>
    <string name="village">Village / City</string>
    <string name="class_text">Class</string>
    <string name="name">Name</string>
    <string name="empty_field">Empty Field</string>
    <string name="password_not_match">Password not match</string>
    <string name="level_one">Level 1</string>
    <string name="level_two">Level 2</string>
    <string name="level_three">Level 3</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="today">Today</string>
    <string name="points">Points</string>
    <string name="levels">Levels</string>
    <string name="start">Start</string>
    <string name="cetificate">Certificate</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="basic">Basic</string>
    <string name="rules">Rules</string>
    <string name="question">Question</string>
    <string name="slash">/</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="empty_email">Empty Email</string>
    <string name="empty_phone_number">Empty Phone Number</string>
    <string name="enter_valid_phone">Enter valid phone number</string>
    <string name="zip_code">Zip Code</string>
    <string name="invalid_response">Invalid Response From Server</string>
    <string name="enter_valid_otp">Enter valid otp</string>
    <string name="your_score_is">Your Score is</string>
    <string name="quiz_score_generic">%1$s / %2$s</string>
    <string name="generic_text">My Name is %1$s %2$s</string>
    <string name="correct">CORRECT</string>
    <string name="wrong">WRONG</string>
    <string name="unanswered">NOT ANSWERED</string>
    <string name="designed_and_developed_by_m90_in">Designed and Developed by M90.in</string>
    <string name="participate_in_all_the_activities">Participate in all the activities</string>
    <string name="donate_as_per_your_wishes">Donate as per your wishes</string>
    <string name="invalid_mobile_number">Invalid Mobile Number</string>
    <string name="welcome_to_millet_india">Welcome to Millet India</string>
    <string name="full_name">Full Name</string>
    <string name="organisation_full_name">School / Organisation Name</string>
    <string name="division">Division</string>
    <string name="done">Done</string>
    <string name="please_select_division">Please select division</string>
    <string name="please_select_district">Please select district</string>
    <string name="please_select_taluka">Please select taluka</string>
    <string name="please_select_village">Please select village</string>
    <string name="maharashtra">Maharashtra</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="please_select_amount">Please select amount</string>
    <array name="arr_class">
        <item>Class 1-4</item>
        <item>Class 5-7</item>
        <item>Class 8-10</item>
        <item>More than 10</item>
    </array>
    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="call_or_whatsapp_us_on">Call or WhatsApp us on :</string>
    <string name="_91_82754_41808">+91 82754 41808</string>
    <string name="_91_9028995999">+91 9028995999</string>
    <string name="_91_9545960254">+91 9545960254</string>
    <string name="mail_us_on">Mail us on</string>
    <string name="tifanfoundation_gmail_com">tifanfoundation@gmail.com</string>
    <string name="finish">Finish</string>
    <string name="news">News</string>
    <string name="who_is_using">Who are you</string>
    <string name="organisation">School / Organisation</string>
    <string name="user">User</string>
    <string name="title_user_list">Users</string>
    <string name="indivisual">User/Indivisual</string>
    <string name="score">Score</string>
    <string name="type">Type</string>
    <string name="organisational_point">Organisational Points</string>
    <string name="referal_point">Referal Points</string>
    <string name="referal_code">Referal Code (optional)</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="change_organisation">Change Organisation</string>
    <string name="my_performance">My Performance</string>
    <string name="ref">Ref</string>
    <string name="org">Org</string>
    <string name="earn">Earn</string>
    <string name="donation_description">Your donation, no matter the size, helps us to continue our mission of spreading hope and making positive transformations. Join us for making a difference today!</string>
    <string name="hash_maha_millet">#MahaMilletQuiz</string>
    <string name="invalid_user">Please enter correct login I\'d and password</string>
    <string name="downloaded_successfully">Downloaded Successfully</string>
    <string name="registration_number">Registration number</string>
    <string name="total">Total :</string>
    <string name="not_verified">You are welcome. I’m glad you are interested in the MahaMilletsQuiz, a quiz competition on the goodness of millets and their health benefits. Millets are nutritious cereals that are rich in vitamins, minerals, essential fatty acids and antioxidants. They are also climate-resilient crops that can grow in dry and marginal lands. The United Nations has declared 2023 as the International Year of Millets (IYOM) to raise awareness and promote the consumption of millets globally.\n\nYour registration is in process and you will soon receive the registration approval. You can contact the Tifan Foundation for any queries or assistance.</string>
</resources>