<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mninetytechnology.mahamillateapp.acitivities.ui.organisation.home.OrganisationHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_organisation_home" />

    <fragment
        android:id="@+id/navigation_user_list"
        android:name="com.mninetytechnology.mahamillateapp.acitivities.ui.organisation.userlist.UserListFragment"
        android:label="@string/title_user_list"
        tools:layout="@layout/fragment_user_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.mninetytechnology.mahamillateapp.acitivities.ui.organisation.profile.OrganisationProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_organisation_profile" />
</navigation>