<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="presenter"
            type="com.mninetytechnology.mahamillateapp.presenter.OtpPresenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".acitivities.ui.OtpCheckActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/password"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification_message"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            />

        <com.goodiebag.pinview.Pinview
            android:id="@+id/pinview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pinWidth="40dp"
            app:pinHeight="40dp"
            app:pinLength="4"
            app:cursorVisible="true"
            app:forceKeyboard="true"
            app:hint="0"
            app:inputType="number"
            app:pinBackground="@drawable/ic_rounded_corner_rectangle"
            app:textSize="12sp"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rounded_corner_rectangle"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@color/green"
            android:layout_margin="10dp"
            android:onClick="@{ () -> presenter.verifyOtp()}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alrady_have_an_account" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/green"
                android:textStyle="bold"/>
        </LinearLayout>

        <include layout="@layout/bottom_logo_design"/>
    </LinearLayout>
</layout>