<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="presenter"
            type="com.mninetytechnology.mahamillateapp.presenter.MobileCheckPresenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".acitivities.ui.user.MobileCheckActivity">


        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/mobile_page_img" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_to_millet_india"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_margin="10dp"
            android:background="#FFFFFF">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:background="@drawable/round_corner_edittext"
                android:inputType="number"
                android:text="@={presenter.mobile}"
                android:padding="@dimen/activity_horizontal_margin"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/next"
            android:onClick="@{()->presenter.validateData()}"/>
    </LinearLayout>
</layout>